# LibGastonForSofia

./: .gitignore  CMakeLists.txt  Makefile  README.md  closeleg.cpp  database.cpp  legoccurrence.h  main.cpp  patterngraph.cpp  patterntree.cpp  patterntree.h
inc/: LibGastonForSofia.h
src/: LibGastonForSofia.cpp  closeleg.h  database.cpp  database.h  graphstate.cpp  graphstate.h  legoccurrence.cpp  main.cpp  misc.h  path.cpp  path.h  patterngraph.cpp  patterngraph.h  patterntree.cpp  patterntree.h
